2007-07-20  Sam Weinig  <sam@webkit.org>

        Reviewed by Beth Dakin.

        Computed style for border radii should return a CSSValueList instead 
        of CSSPrimitiveValue (with a Pair type) when the radii are not the same. 

        * fast/css/computed-style-expected.txt:
        * fast/css/computed-style-without-renderer-expected.txt:
        * fast/css/getComputedStyle-borderRadius-expected.txt: Copied from LayoutTests/fast/dom/getComputedStyle-borderRadius-expected.txt.
        * fast/css/getComputedStyle-borderRadius.html: Copied from LayoutTests/fast/dom/getComputedStyle-borderRadius.html.
        * fast/dom/getComputedStyle-borderRadius-expected.txt: Removed.
        * fast/dom/getComputedStyle-borderRadius.html: Removed.

2007-07-20  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - test for <rdar://problem/5331723> <rdar://problem/5331723> Safari gives error
          103 for URLs that Adobe Lightroom's Preview feature produces, with ":1" in the hostname

        * fast/loader/file-URL-with-port-number-expected.txt: Added.
        * fast/loader/file-URL-with-port-number.html: Added.
        * fast/loader/resources/empty-subframe.html: Added.

2007-07-20  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        Testcase for:
        http://bugs.webkit.org/show_bug.cgi?id=14642
        REGRESSION(r24064-24096): Reflection type effect in canvas tag broke

        * fast/canvas/gradient-empty-path-expected.checksum: Added.
        * fast/canvas/gradient-empty-path-expected.png: Added.
        * fast/canvas/gradient-empty-path-expected.txt: Added.
        * fast/canvas/gradient-empty-path.html: Added.

2007-07-19  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Darin Adler.
        
        Test for http://bugs.webkit.org/show_bug.cgi?id=10880 | <rdar://problem/5335694>
        REGRESSION: JavaScript menu doesn't appear on pricepoint.com (14595)
        