@@ -18,6 +18,8 @@ getPropertyValue(-webkit-border-bottom-left-radius): 10px
 getPropertyCSSValue(-webkit-border-bottom-left-radius): [object CSSPrimitiveValue]
 
 Test getting 0px value border radius.
-getPropertyValue(-webkit-border-top-right-radius): 0px
-getPropertyCSSValue(-webkit-border-top-right-radius): [object CSSPrimitiveValue]
+getPropertyValue(-webkit-border-top-left-radius): 0px
+getPropertyCSSValue(-webkit-border-top-left-radius): [object CSSPrimitiveValue]
+getPropertyValue(-webkit-border-top-left-radius): 0px
+getPropertyCSSValue(-webkit-border-top-left-radius): [object CSSPrimitiveValue]
 
